--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   country_code_picker: ^3.0.0
   image_picker: ^0.8.7+3
   like_button: ^2.0.5
+  carousel_slider: ^4.2.1
+  flutter_page_view_indicator: ^0.0.5
+  firebase_auth: ^4.4.2
+  firebase_core: ^2.10.0
+  google_sign_in: ^6.1.0
+  
 
 dev_dependencies:
   flutter_test:
